Fix scrollbar issue created by topbar

--- a/app/ui/global.scss
+++ b/app/ui/global.scss
@@ -18,12 +18,12 @@ a {
     gap: 0.5rem;
     justify-content: center;
     align-items: center;
-    height: 33px;
+    height: 5vh;
 }
 
 .contenedor {
     display: flex;
-    height: 100vh;
+    height: 95vh;
     overflow: hidden;
 }
 
@@ -31,6 +31,7 @@ a {
     width: 320px;
     background-color: #121214;
     border-right: 1px solid #6d6e771f;
+    border-top: 1px solid #6d6e771f;
     position: sticky;
     top: 0;
     display: flex;
@@ -122,9 +123,10 @@ a {
     flex: 1;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
     background-color: #1a1a1e;
+    border-top: 1px solid #6d6e771f;
 }
 
 .table-container {
@@ -300,7 +302,7 @@ tbody tr {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0.1rem 0.8rem;
+    padding: 0.1rem 0.8rem 0.3rem;
     background-color: #202024;
 }
 
